force-app/main/default/objects/SuRF_POS__c/SuRF_POS__c.object-meta.xml
<CustomObject>
    <description>NPN : Partner Community : NPN Compliance :</description>
    <label>SuRF-POS</label>
    <nameField>
        <displayFormat>SuRF-POS-{00000}</displayFormat>
        <label>SuRF-POS Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SuRF-POS</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>