force-app/main/default/objects/SuRF_POS__c/fields/Fiscal_Year_Quarter__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Year_Quarter__c</fullName>
    <label>Fiscal Year Quarter</label>
    <length>6</length>
    <type>Text</type>
</CustomField>