force-app/main/default/objects/SuRF_POS__c/fields/POS_Revenue__c.field-meta.xml
<CustomField>
    <fullName>POS_Revenue__c</fullName>
    <label>POS Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>