force-app/main/default/objects/SuRF_POS__c/fields/Q2Revenue__c.field-meta.xml
<CustomField>
    <fullName>Q2Revenue__c</fullName>
    <formula>IF(RIGHT(Fiscal_Year_Quarter__c, 2) = &quot;Q2&quot; , POS_Revenue__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q2Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>