force-app/main/default/objects/SuRF_POS__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_ID__c</columns>
    <columns>Competency__c</columns>
    <columns>Fiscal_Year_Quarter__c</columns>
    <columns>Partner_POS_Revenue__c</columns>
    <columns>Partner_Program__c</columns>
    <columns>Partner_Unit_Price__c</columns>
    <columns>POS_Quantity__c</columns>
    <columns>POS_Revenue__c</columns>
    <columns>Product_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>